# matso0-respo-o1

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  app.js  index.html  package.json  styles.css
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
.rules/: agents-core.md  data-governance.md  financial-safety.md  infra-runtime.md
configs/: app.config.example.json  chains.json  models.json  regime.config.json  subscribers.json  tasks.schema.json  token-registry.starter.json
crates/kernel/: Cargo.toml
python/: requirements.txt  train_stub.py
scripts/: check_docs.py  validate_configs.py  workspace_summary.py
