[workspace]
resolver = "2"
members = [
  "crates/kernel",
  "crates/controllers",
  "crates/ml-runtime",
  "crates/agents",
  "crates/ui-shell",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Mat"]
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
slint = "1"
ort = "2.0.0-rc.10"
ndarray = "0.16"
chrono = { version = "0.4", features = ["serde"] }
